k8s-manifests/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  selector:
    matchLabels:
     k8s-app: samplemvc-app
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: samplemvc-app
    spec:
      containers:
      - name: web
        image: <youracr.azurecr.io>/myapp:v1
        ports:
        - containerPort: 80
      imagePullSecrets: 
        - name: testkube-secret
