k8s-manifests/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: samplemvc-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    k8s-app: samplemvc-app
