k8s-manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: secured-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-buffer-size: 128k
    nginx.ingress.kubernetes.io/proxy-buffering: "on"
    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - <your fqn>
      secretName: samplemvc-tls
  rules:
  - host: <your fqdn>
    http:
      paths:
      - path: /
        backend:
          serviceName: samplemvc-svc
          servicePort: 80
